--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz@8..144&family=Roboto+Mono&display=swap');
 
 * {
-  box-sizing: border-box;
+  max-width: 100% !important;
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0px;
 }
 
 .app {
